# nbt-gui

./: Cargo.toml
.github/workflows/: ci.yml
assets/locales/en_US/: menu.ftl
src/: app.rs  document.rs  examples.rs  i18n.rs  main.rs  mcregion.rs
src/ui/: document.rs  mod.rs  tabs.rs
